--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,12 @@
 name: Test for serializall
 
 on:
-  workflow_dispatch:
   workflow_call:
   pull_request:
   push:
+    branches:
+    - '*'
+    - '!badges' # to exclude execution if someone pushes on this branch (shouldn't happen)
 
 concurrency:
   # github.workflow: name of the workflow
@@ -105,7 +107,7 @@ jobs:
       branch: ${{ steps.extract_branch.outputs.branch }}
   
   badge-update:
-    if: github.repository == 'PyMoDAQ/serializall' && !(github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork)
+    if: github.repository == 'PyMoDAQ/serializall' && !(github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork) && startsWith(github.ref, 'refs/heads/')
     runs-on: ubuntu-latest
     needs: tests # Ensure this job runs after all matrix jobs complete
     steps:
